--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 aiohappyeyeballs==2.3.5
 aiohttp==3.10.3
 aiosignal==1.3.1
-anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1710965072196/work
 anyio==4.4.0
-archspec @ file:///croot/archspec_1709217642129/work
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -13,40 +11,26 @@ attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/work
-Brotli @ file:///croot/brotli-split_1714483155106/work
 cachetools==5.4.0
-certifi @ file:///croot/certifi_1717618050233/work/certifi
-cffi @ file:///croot/cffi_1714483155441/work
 chardet==5.2.0
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 comm==0.2.2
-conda @ file:///croot/conda_1715635703388/work
-conda-content-trust @ file:///croot/conda-content-trust_1714483159009/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1706733287605/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1718138267740/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1718136078615/work
 contourpy==1.3.0
-cryptography @ file:///croot/cryptography_1714660666131/work
 cssselect2==0.7.0
 cycler==0.12.1
 debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
-distro @ file:///croot/distro_1714488253808/work
 docker==7.1.0
 executing==2.1.0
 fastjsonschema==2.20.0
 filelock==3.15.4
 fonttools==4.53.1
 fqdn==1.5.1
-frozendict @ file:///croot/frozendict_1713194832637/work
 frozenlist==1.4.1
 fsspec==2024.6.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
-idna @ file:///croot/idna_1714398848350/work
 ipykernel==6.29.5
 ipython==8.27.0
 ipywidgets==8.1.5
@@ -55,7 +39,6 @@ jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
 json5==0.9.25
-jsonpatch @ file:///croot/jsonpatch_1714483231291/work
 jsonpointer==2.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -72,13 +55,11 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
-libmambapy @ file:///croot/mamba-split_1714483352891/work/libmambapy
 loguru==0.7.2
 lxml==5.3.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
-menuinst @ file:///croot/menuinst_1718132535249/work
 mistune==3.0.2
 mpmath==1.3.0
 multidict==6.0.5
@@ -105,24 +86,24 @@ nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 nvitop==1.3.2
 overrides==7.7.0
-packaging @ file:///croot/packaging_1710807400464/work
+packaging
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
-platformdirs @ file:///work/perseverance-python-buildout/croot/platformdirs_1701732573265/work
-pluggy @ file:///work/perseverance-python-buildout/croot/pluggy_1698805497733/work
+platformdirs
+pluggy 
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pycosat @ file:///croot/pycosat_1714510623388/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pycosat 
+pycparser 
 Pygments==2.18.0
 pyparsing==3.1.2
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+PySocks
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.2
@@ -130,11 +111,10 @@ PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
 reportlab==4.2.2
-requests @ file:///croot/requests_1716902831423/work
+requests
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
-ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
 rwdq==0.1.3
 scikit-learn==1.5.1
 scipy==1.14.0
@@ -154,15 +134,13 @@ tinycss2==1.3.0
 torch==2.4.0
 torch_geometric==2.5.3
 tornado==6.4.1
-tqdm @ file:///croot/tqdm_1716395931952/work
+tqdm
 traitlets==5.14.3
 triton==3.0.0
-truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
 uri-template==1.3.0
-urllib3 @ file:///croot/urllib3_1718912636303/work
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
@@ -170,4 +148,3 @@ websocket-client==1.8.0
 wheel==0.43.0
 widgetsnbextension==4.0.13
 yarl==1.9.4
-zstandard @ file:///croot/zstandard_1714677652653/work
